# cafeteria_backend_challengue

./: .gitignore  alembic.ini  docker-compose.yaml  pyproject.toml
backend/: main.py
backend/alembic/: env.py
backend/config/: __init__.py  config.py  db.py
backend/dependencies/: session_db.py
backend/domain/: members.py  products.py  users.py
backend/enums/: user_enum.py
backend/models/: members.py  products.py  users.py
backend/schemas/: entities.py
