[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Flavio Oria <flavio.oriap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pandas = "^2.2.2"
sqlmodel = "^0.0.16"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
